# MEGANI-lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  commands.txt
.github/workflows/: codeql.yml
docs/: code_conventions.dox
examples/: mnist_ann.c  mnist_conv.c
include/MEGANI/: commons.h  types_wrappers.h
include/MEGANI/input/: def_mx_iter.h  get_mnist_labels.h  mx_iter_funcs.h  mx_iterator.h  read_idx1_build_mx.h  read_idx3.h  read_mnist.h
include/MEGANI/layers/: convolution.h  dense.h  flatten.h  image_layer_data.h
include/MEGANI/layers/conv/: im2col.h
include/MEGANI/layers/convolution/: convolution.h
include/MEGANI/layers/dense/: dense.h
include/MEGANI/mx/: mx.h
include/MEGANI/nn/: nn.h
include/MEGANI/optimizers/: bgd.h  optimizer.h  rms_prop.h
python_sources/: generateTest.py  generateTests.py  get_mnist_dataset.py  read_mnist.py  testsGenerator.py
scripts/: Untitled.ipynb  generateTests.py  generate_functional_tests.py  mx_perf_test.py  read_mnist.py  requirements.txt  testsGenerator.py
sources/: commons.c  main.c
sources/input/: default_mx_iterator.c  get_mnist_labels.c  mx_iterator.c  read_idx1_build_mx.c  read_idx3.c  read_mnist.c
sources/layers/: convolution.c  dense.c  flatten.c
sources/layers/conv/: im2col.c  im2col.h
sources/layers/convolution/: convolution.c
sources/layers/dense/: dense.c  dense.h
sources/layers/drop/: drop.c  drop.h
sources/layers/flatten/: flatten.c
sources/matrix/: matrix.c  matrix.h  mx.h
sources/matrix_unit_tests/: matrix_unit_tests.c
sources/mx/: mx.c  mx.h
sources/nn/: nn.c  nn.h
sources/optimizers/: bgd.c  rms_prop.c
sources/tests/: macros_ut.h  main.c  ut_macros.h
sources/tests/matrix_unit_tests/: mx_ut.c  mx_ut.h
sources/tests/nn_unit_tests/: nn_ut.c  nn_ut.h
sources/unit_tests/: unit_tests.c
